--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,8 +18,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
+html {
+  width: 100%;
+  height: 100%;
+  background-color: #183446;
+}
 .flex-row {
   display: flex;
   flex-wrap: wrap;
@@ -35,4 +41,32 @@ body {
 
 .home-name {
   color: white;
+}
+
+.home-text-container {
+  text-align: left;
+  padding-top: 15%;
+  padding-left: 20%;
+}
+
+.welcome-text {
+  display: block;
+  font-size: 3vw;
+  color:white;
+}
+
+.intro-text {
+  display: block;
+  font-size: 2.5vw;
+  color: #0090C1;
+}
+
+.job-text {
+  display: block;
+  font-size: 3vw;
+  color: white;
+}
+
+.container-fluid {
+  background-color: #183446;
 }
