--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,16 @@ body {
   
 }
 
+footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color:#0090C1;
+   color: white;
+   text-align: center;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -69,4 +79,8 @@ html {
 
 .container-fluid {
   background-color: #183446;
+}
+
+.nav-text {
+  font-size: large;
 }
