added emailjs to the contact form. Its now funtional only things left for the contact page will be style a design. Almost there

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -159,7 +159,7 @@ input[type=submit]:hover {
 .contactmecontainer {
 display: flex;
 flex-wrap: wrap;
-justify-content: center;
+justify-content: space-evenly;
 padding-top: 100px;
 
 }
