--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -15,6 +15,11 @@
      justify-content: center;
  }
 
+ form {
+     width: fit-content;
+     display: inline-block;
+ }
+
  @media screen and (min-width: 1135px) {
      .reachMeDiv {
          padding-left: 4rem;
